# melanie

admire/: .gitignore  mv.py  pyproject.toml  taplo.toml
admire/.trunk/: trunk.yaml
admire/anisearch/: __init__.py  anisearch.py  info.json
admire/antinuke/: __init__.py  antinuke.py  info.json
admire/application/: __init__.py  application.py  info.json
admire/audio/: __init__.py  audio_dataclasses.py  audio_logging.py  converters.py  equalizer.py  errors.py  manager.py  sql_statements.py  utils.py
admire/away/: __init__.py  away.py  info.json
admire/baron/: __init__.py  baron.py  info.json
admire/botstatus/: __init__.py  botstatus.py  info.json
admire/categoryhelp/: __init__.py  categoryhelp.py  info.json
admire/channelstats/: __init__.py  channelstats.py
admire/chat/: chat.py
admire/chatgpt/: __init__.py  agent.py  chatgpt.py  info.json  models.py  response.json
admire/check/: __init__.py  check.py  info.json
admire/colorme/: __init__.py  colorme.py  colors.json  info.json
admire/compliment/: __init__.py  compliment.py  compliments.py  info.json  insults.py
admire/conversions/: __init__.py  coin.py  conversions.py  errors.py  info.json
admire/customcom/: customcom.py
admire/customhelp/: __init__.py  abc.py  customhelp.py  info.json
admire/dankmemer/: README.md  __init__.py  dankmemer.py  info.json
admire/dashboard/: __init__.py  baserpc.py  dashboard.py  helpers.py  info.json  menus.py
admire/dbump/: __init__.py  converters.py  disboardreminder.py  info.json
admire/dev/: __init__.py  dev.py
admire/dictionary/: __init__.py  dictionary.py  helpers.py  info.json
admire/embedutils/: __init__.py  commands.py  converters.py  embed.py  errors.py  info.json
admire/emojitools/: __init__.py  constants.py  emojitools.py  helpers.py  info.json
admire/executionstracker/: __init__.py  admin.sql  constants.py  exe.py  helpers.py  info.json  integrations.py  reload.py  select-recent-seen-guilds.sql
admire/extendedmodlog/: __init__.py  emoji.py  eventmixin.py  extendedmodlog.py  formatter.py  framework_settings.py  helpers.py  info.json  logmsg.py  objects.py  settings.py
admire/fenrir/: __init__.py  fenrir.py  info.json
admire/filter/: __init__.py  filter.py
admire/fixedfloat/: __init__.py  api.py  fixedfloat.py  info.json
admire/fun/: __init__.py  fun.py  generate-states.py  info.json  preload_emojis.py
admire/gallery/: __init__.py  gallery.py  info.json
admire/giveaways/: __init__.py  converter.py  giveaways.py  info.json  objects.py
admire/image/: __init__.py  image.py
admire/instagram/: __init__.py  info.json  instagram.py
admire/inviteblocklist/: __init__.py  info.json  inviteblocklist.py
admire/jail/: __init__.py  info.json  jail.py
admire/jsk/: __init__.py  info.json
admire/linkquoter/: __init__.py  converters.py  info.json  linkquoter.py
admire/lock/: __init__.py  converters.py  info.json  lock.py
admire/melanie/: __init__.py  _redis.py  bitrate.py  bot.py  browser_types.py  core.py  curl.py  dask_preloader.py  deepreload.py  doh.py  helpers.py  humanbytes.py  mime_table.py  scope.py  stats.py  strutils.py  subprocess_runner.py  tenor.py  timing.py  uploads.py  webhooks.py
admire/melutils/: __init__.py  common_variables.py  converter.py  embeds.py  info.json  mel_utils.py  menus.py  utils.py
admire/modlog/: __init__.py  modlog.py
admire/modsystem/: README.md  __init__.py  abc.py  api.py  automod.py  cache.py  converters.py  data.json  errors.py  info.json  iterators.py  models.py  settings.py  warnsystem.py
admire/modtoolkit/: __init__.py  cog_documenter.py  info.json  modtoolkit.py
admire/nicknamer/: __init__.py  nicknamer.py
admire/nickworker/: __init__.py  info.json  nickworker.py
admire/nitrorole/: __init__.py  guild_data.py  info.json  nitrorole.py
admire/notsobot/: __init__.py  converter.py  helpers.py  info.json  notsobot.py  temp.py  utils.py
admire/partygames/: .libcst.codemod.yaml  __init__.py  info.json  partygames.py
admire/phenutils/: __init__.py  info.json  phenutils.py
admire/purchases/: __init__.py  models.py  purchases.py
admire/reactpoll/: __init__.py  converters.py  info.json  polls.py  reactpoll.py
admire/remindme/: abc.py  (+7 more)
melaniebot/: .gitignore  LICENSE  README.md  file.yaml  pyproject.toml  taplo.toml
melaniebot/melaniebot/: __init__.py  __main__.py  launcher.py  setup.py
melaniebot/melaniebot/cogs/admin/: __init__.py  admin.py  announcer.py  converters.py
melaniebot/melaniebot/cogs/alias/: __init__.py  alias.py  alias_entry.py
melaniebot/melaniebot/cogs/downloader/: __init__.py  checks.py  converters.py  downloader.py  errors.py  info_schemas.py  installable.py  json_mixins.py  repo_manager.py
melaniebot/melaniebot/cogs/mod/: __init__.py  abc.py  converters.py  events.py  kickban.py  mod.py  names.py  settings.py  slowmode.py  utils.py
melaniebot/melaniebot/cogs/permissions/: __init__.py  converters.py  permissions.py
melaniebot/melaniebot/core/: __init__.py  _diagnoser.py  _sharedlibdeprecation.py  bank.py  bot.py  checks.py  cli.py  cog_manager.py  config.py  core_commands.py  data_manager.py  dev_commands.py  errors.py  events.py  generic_casetypes.py  global_checks.py  i18n.py  modlog.py  rpc.py  settings_caches.py  tasks.py
melaniebot/melaniebot/core/commands/: __init__.py  _dpy_reimplements.py  commands.py  context.py  converter.py  errors.py  help.py  requires.py
melaniebot/melaniebot/core/drivers/: __init__.py  _mongo.py  base.py  json.py
melaniebot/melaniebot/core/drivers/postgres/: __init__.py  details.py  postgres.py
melaniebot/melaniebot/core/utils/: __init__.py  _internal_utils.py  antispam.py  caching.py  chat_formatting.py  common_filters.py  dbtools.py  embed.py  menus.py  mod.py  predicates.py  safety.py  tunnel.py
melaniebot/melaniebot/models/: startup.py  tenor.py
melaniebot/schema/: red_cog.schema.json  red_cog_repo.schema.json
shared-api/: README.md  api_services.py  b.sh  browser.py  core.py  docker-chrome-env.env  docker-compose.yml  instagram_credentials.yaml  launch.py  pyproject.toml  startup.py  taplo.toml
(+414 files in other folders)
